Fixed strange white space in Projects

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -239,7 +239,7 @@ h2 {
 .project-container ul {
   list-style: none;
   display: flex;
-  overflow-x: scroll;
+  overflow-x: auto;
   flex-direction: row;
   margin-bottom: 2%;
 }
